[gd_scene load_steps=6 format=2]

[ext_resource path="res://rock/rock.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/main.gd" type="Script" id=3]
[ext_resource path="res://main/blue_nebula.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 8, 600, 0, 0, 0, 0, 8, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Rock = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 512 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="RockPath" type="Path2D" parent="."]
position = Vector2( -8, 0 )
curve = SubResource( 1 )

[node name="RockSpawn" type="PathFollow2D" parent="RockPath"]
position = Vector2( 8, 0 )

[node name="Rocks" type="Node" parent="."]

[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
